--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 			header
 		-->
   <header>
-    <div class="header">
       <p>техномарт</p>
       <p><input type="search" placeholder="Поиск"></p>
       <div>Закладки</div>
       <div>Корзина</div>
-      <div>Оформить заказ</div>
+       <a class="button" href="">Оформить заказ</a>
       <div class="center-header">
         <p>Интернет магазин строительных материалов и инстументов для ремонта
         </p>
@@ -41,16 +40,16 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-    </div>
   </header>
   <!--
 			main
 		-->
   <main>
     <section class="top-main">
-      <div class="top-main-vetrina">
+      <div class="top-main">
 
-        <div>Перфораторы</div>
+        <div>Перфораторы
+          <a class="button" href="#">открыть католог</a></div>
         <div>
           <ul>
             <li>Материалы
@@ -255,5 +254,4 @@
     </div>
   </footer>
 </body>
-
 </html>
