Вторая страница и немного первой

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 			header
 		-->
   <header>
-    <div class="header">
+    <div class="conteiner">
       <div class="header-top">
-        <div class="logo">Техномарт</div>
+        <div class="logo"><h1>Техномарт</h1></div>
         <div class="search"><input type="search" placeholder="Поиск"></div>
         <a class="bookmarks" href="#">Закладки</a>
         <a class="basket" href="#">Корзина</a>
@@ -50,7 +50,7 @@
 			main
 		-->
   <main>
-    <div class="conteiner-main">
+    <div class="conteiner">
       <div class="top-main">
         <div class="offers">
           <div class="sliders">
@@ -104,23 +104,19 @@
                 <a href="#">Купить</a>
                 <a href="">В закладки</a>
               </div>
-              <h3>
-                <span class="popular-product-category">Перфоратор Bosch BFG 9000</span>
-              </h3>
+              <h3>Перфоратор Bosch BFG 9000</h3>
               <div class="popular-image">
                 <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 9000">
               </div>
               <span class="oldvalue">32300 P.</span>
-              <a class="button" href="">25500 Р.</a>
+              <span class="newvalue"><a class="button" href="">25500 Р.</a></span>
             </li>
             <li class="popular-product-item">
               <div class="actions">
                 <a href="#">Купить</a>
                 <a href="">В закладки</a>
               </div>
-              <h3>
-                <span class="popular-product-category">Перфоратор Bosch BFG 3000</span>
-              </h3>
+              <h3> Перфоратор Bosch BFG 3000</h3>
               <p class="popular-product-item-image">
                 <a href="">
              <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 3000">
@@ -129,33 +125,29 @@
               <span class="oldvalue">22500 P.</span>
               <span class="newvalue"><a class="button" href="">15500 Р.</a></span>
             </li>
-            <li class="popula-product-item">
+            <li class="popular-product-item">
               <div class="actions">
                 <a href="#">Купить</a>
                 <a href="">В закладки</a>
               </div>
-              <h3>
-                <span class="popular-product-category">Перфоратор Bosch BFG 6000</span>
-              </h3>
+              <h3>Перфоратор Bosch BFG 6000</h3>
               <p class="popular-product-item-image">
                 <a href="">
-              <img src="http://placehold.it/150x100" alt="Рисунок">
+              <img src="http://placehold.it/150x100" alt=">Перфоратор Bosch BFG 6000">
             </a>
               </p>
               <span class="oldvalue">30500 P.</span>
               <span class="newvalue"><a class="button" href="">25500 Р.</a></span>
             </li>
-            <li class="popula-product-item">
+            <li class="popular-product-item">
               <div class="actions">
                 <a href="#">Купить</a>
                 <a href="">В закладки</a>
               </div>
-              <h3>
-                <span class="popular-product-category">Перфоратор Bosch BFG 2000</span>
-              </h3>
+              <h3>Перфоратор Bosch BFG 2000</h3>
               <p class="popular-product-item-image">
                 <a href="">
-             <img src="http://placehold.it/150x100" alt="Рисунок">
+             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 2000">
            </a>
               </p>
               <span class="newvalue">
@@ -203,7 +195,6 @@
 		Сервисы
 		-->
       <section class="service">
-
         <p class="">Хороший интернет-магазин отличается от плохого не только ценами!мы стараемся изо всех сил, чтобы сделать покупки приятными.</p>
         <!--
 		Доставка Гарантия Кредит
@@ -213,13 +204,13 @@
           <input type="radio" id="guaranty" name="service">
           <input type="radio" id="credit" name="service">
         </div>
-        <div class="service-toggle">
+        <div class="service-controls">
           <label for="delivery">Доставка</label>
           <label for="guaranty">Гарантия</label>
           <label for="credit">Кредит</label>
         </div>
         <div class="service-help-right">
-          <div class="servise-delivery">
+          <div class="service-delivery">
             <span>Доставка</span>
             <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br> Ведь мы неплохо заработаем, поднимая его на ваш на этаж!</p>
           </div>
@@ -243,7 +234,7 @@
           </ul>
           <a class="button" href="">подробнее о компании</a>
         </div>
-        <div class="bout-company-right">
+        <div class="about-company-right">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
           <a class="button" href="">Заблудились? напишите нам</a>
@@ -252,6 +243,7 @@
     </div>
   </main>
   <footer class="footer">
+   <div class="conteiner">
     <div class="top-footer">
       <h1>Техномарт</h1>
       <ul class="top-footer-navigation">
@@ -290,6 +282,7 @@
         <b>Разработано:</b>
         <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
       </p>
+    </div>
     </div>
   </footer>
 </body>
