--- a/catalog.html
+++ b/catalog.html
@@ -46,6 +46,11 @@
       </div>
     </div>
   </header>
+  <!--
+  
+         Это main 
+   
+   -->
   <main>
     <div class="conteiner">
       <ul class="breadcrumbs">
@@ -217,6 +222,12 @@
       </article>
     </div>
   </main>
+  <!-- 
+  
+  Это Footer
+
+  
+  -->
    <footer class="footer">
    <div class="conteiner">
     <div class="top-footer">
