--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -12,19 +14,20 @@
 		-->
   <header>
     <div class="header-top">
-      <div class="container">
-        <div class="logo">
-          <h1>Техномарт</h1>
-        </div>
-        <div class="search"><input type="search" placeholder="Поиск"></div>
-        <a class="bookmarks" href="#">Закладки:0</a>
-        <a class="basket" href="#">Корзина:0</a>
-        <a class="checkout" href="">Оформить заказ</a>
-      </div>
+       
+        <a class="logo btn" href="index.html">Техномарт</a>
+        <input type="search" placeholder="Поиск">
+        <a class="bookmarks btn" href="#">Закладки:0</a>
+        <a class="basket btn" href="#">Корзина:0</a>
+        <a class="checkout btn" href="">Оформить заказ</a>
+   
+    </div>
       <div class="header-bottom">
         <div class="container">
+         <div class="tittle">
           <p>Интернет магазин строительных материалов и инструментов для ремонта
           </p>
+          </div>
           <div class="contacts">
             <a href="tel:+78125550555">+7 (812)555-05-55 </a>
             <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
@@ -46,7 +49,7 @@
           </nav>
         </div>
       </div>
-    </div>
+   
   </header>
   <!--
 			main
