--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <!--
 		Доставка Гарантия Кредит
 		-->
-          <div class="">
+          <div class="service-pop">
             <div class="service-help">
               <input type="radio" id="delivery" name="service" checked>
               <input type="radio" id="guaranty" name="service">
