--- a/catalog.html
+++ b/catalog.html
@@ -84,12 +84,27 @@
             <h2>Фильтр:</h2>
             <!-- Здесь будет форма -->
             <form class="filter" method="get" action="https://echo.htmlacademy.ru">
-              <fieldset>
+              <fieldset class="filter-price">
                 <legend>Цена:</legend>
+                <div class="range-filter">
+                  <div class="range-control">
+                    <div class="scale">
+                      <div class="bar"></div>
+                      <div class="toggle toggle-min"></div>
+                      <div class="toggle toggle-max"></div>
+                    </div>
+                  </div>
+                  <div class="price-control">
+                    <label class="min-price"><input name="min-price" type="te
+                    " value="0"></label>
+                    <label class="max-price"><input name="min-price" type="te
+                    " value="30000"></label>
+                  </div>
+                </div>
               </fieldset>
               <fieldset>
                 <legend>Производители:</legend>
-                <ul>
+                <ul class="filter-producer">
                   <li class="filter-option">
                     <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="bosch" id="filter-bosch" checked>
                     <label for="filter-bosch">BOSCH</label>
