Сделал слайдер и 5 блоков + добавил картинки
На главной странице сделал слайдев и 5 блоков. Вернул обратно картинки исправленные( без пробелов и заглавных букв)ю

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
     <h1 class="visually-hidden">Техномарт </h1>
     <div class="container">
       <div class="offers">
-        <div class="category">
+        <div class="category category-materials">
           <h3>Материалы</h3>
           <a class="button-category" href="#">На любой вкус</a>
         </div>
-        <div class="category">
+        <div class="category category-instrument">
           <h3>Инструмент</h3>
           <a class="button-category" href="#">На все случаи</a>
         </div>
-        <div class="category">
+        <div class="category category-technics">
           <h3>Техника</h3>
-          <a class="button-category" href="#">Для стройки</a>
+          <a class="button-category " href="#">Для стройки</a>
         </div>
           <div class="sliders">
           <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
@@ -87,21 +87,21 @@
             <li class="slide1 slider-item">
               <h2>Перфораторы</h2>
               <p>Настроящие мужские игрушки</p>
-              <a class="button" href="#">Открыть католог</a>
+              <a class="button-slider" href="#">Открыть католог</a>
             </li>
             <li class="slide2 slider-item">
               <h2>Дрели</h2>
               <p>Соседям на радость!</p>
-              <a class="button" href="#">Открыть католог</a>
+              <a class="button-slider" href="#">Открыть католог</a>
           </li>
             </ul>
           </div>
         <div>
-        <div class="category">
+        <div class="category category-discounts">
           <h3>Скидки 50%</h3>
           <a class="button-category" href="#">На 350 товаров</a>
         </div>
-        <div class="category">
+        <div class="category category-delivery">
           <h3>Доставка</h3>
           <a class="button-category" href="#">Бесплатно</a>
         </div>
